# openapi.yaml
@@ -16,14 +16,7 @@ paths:
           schema:
             type: string
           required: true
-          description: The ticker symbol of the company for which financial ratios are to be fetched.
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            default: 50
-          required: false
-          description: The maximum number of financial ratios to retrieve (default is 50).
+          description: The ticker symbol of the company for which information are to be fetched.
       responses:
         "200":
           description: OK
@@ -52,7 +45,7 @@ paths:
           schema:
             type: string
           required: true
-          description: The ticker symbol of the company for which financial ratios are to be fetched.
+          description: The ticker symbol of the company for which information are to be fetched.
       responses:
         "200":
           description: OK
@@ -82,7 +75,7 @@ paths:
           schema:
             type: string
           required: true
-          description: The ticker symbol of the company for which financial ratios are to be fetched.
+          description: The ticker symbol of the company for which information are to be fetched.
       responses:
         "200":
           description: OK
@@ -102,17 +95,17 @@ paths:
               schema:
                 type: string
 
-  /analyst_target_price/{ticker}:
+  /insider_trading/{ticker}:
     get:
-      operationId: getAnalystTarget
-      summary: Retrieve recent analyst target price
+      operationId: getInsiderTrading
+      summary: Retrieve recent trading activities of insiders in the company (e.g. whether employees like senior engieers at a company sell/buy their company's stock)
       parameters:
         - in: path
           name: ticker
           schema:
             type: string
           required: true
-          description: The ticker symbol of the company for which financial ratios are to be fetched.
+          description: The ticker symbol of the company for which information are to be fetched.
       responses:
         "200":
           description: OK
@@ -123,7 +116,6 @@ paths:
                 items:
                   type: object
                   properties:
-              
                     # Add properties here based on the structure of the JSON response
         "400":
           description: Bad Request
@@ -132,6 +124,175 @@ paths:
               schema:
                 type: string
 
+  /esg_score/{ticker}:
+    get:
+      operationId: getESGScore
+      summary: Retrieve recent ESG score of a company (i.e score on how much a company cares about environment, social, and governance)
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    # Add properties here based on the structure of the JSON response
+        "400":
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+
+  /SEC_Filling/{ticker}:
+    get:
+      operationId: getSECFilling
+      summary: Retrieve recent SEC filling of a company, it only returns the link to the filling
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    # Add properties here based on the structure of the JSON response
+        "400":
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+
+  /revenue_product_segmentation_annually/{ticker}:
+    get:
+      operationId: getRevenueProductSegmentationAnnually
+      summary: Retrieve company revenue segmentation by product annually
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+
+  /sales_revenue_by_product_segement_quarterly/{ticker}:
+    get:
+      operationId: getRevenueProductSegmentationQuarterly
+      summary: Retrieve company revenue segmentation by product quarterly
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+
+  /sales_revenue_by_geographic_segmentation_annually/{ticker}:
+    get:
+      operationId: getRevenueGeographicSegmentationAnnually
+      summary: Retrieve company revenue segmentation by geographic annually
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+
+  /sales_revenue_by_geographic_segmentation_quarterly/{ticker}:
+    get:
+      operationId: getRevenueGeographicSegmentationQuarterly
+      summary: Retrieve company revenue segmentation by geographic quarterly
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+
+  /social_media_sentiments/{ticker}:
+    get:
+      operationId: getSocialMediaSentiments
+      summary: Retrieve social media sentiments of a company (including twitter, stocktwits, etc.)
+      parameters:
+        - in: path
+          name: ticker
+          schema:
+            type: string
+          required: true
+          description: The ticker symbol of the company for which information are to be fetched.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
 
 
 components:
